# stuart

./: CHANGELOG.md  Cargo.toml  README.md  cog.toml  example.config.toml
.github/workflows/: release.yml
docs/: demo.tape  record_demo.py
src/: CHANGELOG.md  cli.rs  config.rs  main.rs  serial.rs  state.rs  ui.rs
src/ui/: common.rs  port_select.rs  settings.rs  terminal.rs
