[package]
name = "stuart"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
serialport = "4.9.0"
terminput = "0.5.14"
terminput-crossterm = "0.4.10"
vt100 = "0.16.2"
