[package]
name = "stuart-cli"
description = "A serial terminal TUI"
license = "AGPL-3.0-only"
repository = "https://github.com/mroetsc/stuart"
readme = "README.md"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "stuart"
path = "src/main.rs"

[dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
config = "0.15.23"
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serialport = "4.9.0"
strip-ansi-escapes = "0.2.1"
terminput = "0.5.14"
terminput-crossterm = "0.4.10"
vt100 = "0.16.2"
